test/lattests/bad/assignmentToFunction.lat
int foo() {
    return 1;
}

int bar() {
    return 0;
}

int main() {
    foo = bar;

    return 0;
}